# lambinator

./: .gitignore  README_LAU.txt  build.xml  buildme.bat  buildme.sh  clojure  run_all_demos  run_all_demos.bat  run_app_creator  run_wave_demo  ui.clj  user.clj
cfbx/: .gitignore  CMakeLists.txt  cfbx.cxx  cfbx.h  cmake_install.cmake
src/com/trolltech/demos/: HelloGL.java  LambdaGLWidget.java
src/data/glsl/: basic_image.glslf  basic_image.glslv  basic_invert.glslf  invalid.glslf  passthrough.glslv  single_texture.glslf  test1.glslv  test2.glslf  test3.glslv  wave.glslf  wave.glslv  wontlink.glslf
src/lambinator/: app_creator.clj  demo.clj  dynfun.clj  experiment.clj  fs.clj  graph_util.clj  graphics_math.clj  log.clj  lwjgl.clj  mockgl.clj  rc.clj  rc_defs.clj  rcgl.clj  rcgl_defs.clj  rcgl_fbo.clj  rcgl_glsl.clj  rcgl_texture.clj  rcgl_vbo.clj  repl_test.clj  repl_test_rcgl.clj  repl_wave.clj  repl_wave_defs.clj  repl_wave_finish.clj  repl_wave_simple.clj  repl_wave_vbo.clj  scene.clj  scene_engine.clj  scenegraph.clj  test.clj  test_mockgl.clj  test_rc.clj  test_rcgl.clj  test_util.clj  ui.clj  ui_defs.clj  unused.clj  util.clj
src/lambinator/app_creator/: model.clj  scene.clj  scene_engine.clj  view.clj
src/lambinator/app_creator/model/: resources.clj
src/lambinator/demo/: basic.clj  fishparts.clj  functional.clj  functionalgraphics.clj  image.clj  particle.clj  util.clj  wave.clj
src/lambinator/rcgl/: fbo.clj  glsl.clj  image.clj  texture.clj  util.clj  vbo.clj
src/lambinator/ui/: gl.clj  inspector.clj  util.clj
(+1 files in other folders)
